tests/positive/unary_operations_basic.em
int main() {
    bool b = !true;
    return b ? 0 : 1;
}