tests/negative/function_definitions_typical.em
int func(int a, b) {
return 0;
}
int main() {
return 0;
}